Fixed issue with border clipping over panel

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -20,6 +20,7 @@ header {
     border: 2px solid #4f4f4f;
     align-self: flex-start;
     user-select: none;
+    overflow: hidden;
 }
 
 .panel ul {
